--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ python = "^3.9"
 pillow = "^8.3.2"
 
 [tool.poetry.dev-dependencies]
+mkdocs = "^1.2.2"
+mkdocs-material = "^7.2.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
