--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
   - Tutorial:
     - Installation: tutorial/installation.md
     - Hello, λanim!: tutorial/hello.md
+    - How does Lanim work?: tutorial/how-does-lanim-work.md
   - How-to guides: howtos.md
 
 theme:
@@ -19,3 +20,5 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.tabbed
   - smarty
+  - admonition
+  - pymdownx.details
