--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -34,6 +34,7 @@ plugins:
         python:
             rendering:
               show_root_heading: true
+              show_root_full_path: false
               show_if_no_docstring: true
               show_signature_annotations: true
               members_order: source
